samples/OK/if_else.php
<?php
declare(strict_types=1);
if( $a === foo())
{
    $a = 1;
}
else
{
    $a = 2;
}
