samples/SYNTAX_ERROR/while_assign.php
<?php
declare(strict_types=1);

while($a = 1)
{
    $a = $a - 1;
}
else
